amf-graphql-test-sets/shared/src/test/resources/graphql/tck/apis/invalid/broken-interface-fields.api.report
ModelId: file://amf-graphql-test-sets/shared/src/test/resources/graphql/tck/apis/invalid/broken-interface-fields.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 2

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#required-fields
  Message: field address is required in Person
  Severity: Violation
  Target: file://amf-graphql-test-sets/shared/src/test/resources/graphql/tck/apis/invalid/broken-interface-fields.api.graphql#/declares/shape/Person
  Property: http://www.w3.org/ns/shacl#property
  Range: [(10,4)-(10,19)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#required-fields
  Message: field name is required in Person
  Severity: Violation
  Target: file://amf-graphql-test-sets/shared/src/test/resources/graphql/tck/apis/invalid/broken-interface-fields.api.graphql#/declares/shape/Person
  Property: http://www.w3.org/ns/shacl#property
  Range: [(10,4)-(10,19)]
  Location: 
